--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 
 <!--
  File: /pdo@cs2:~/public_html/Hw4/index.html
- 91.461 Assignment - Homework 4(Part 2): Styling your first web page with CSS
+ 91.461 Assignment - Homework 4(Part 2): Styling your first web page with Bootstrap
 Phuong N. Do, UMass Lowell Computer Science, phuong_do@student.uml.edu
  Copyright (c) 2020 by Phuong N.Do. All rights reserved. May be
 freely
  copied or excerpted for educational purposes with credit to the
 author.
- updated by PND on September 16, 2020 at 6:10 PM
+ updated by PND on October 13, 2020 at 11:10 PM
+
+Description: Mainly using Bootstrap to cut off CSS style and enhance my responsive website
 
  Cite:
  Some minor code is from https://www.youtube.com/watch?v=yfoY53QXEnI&feature=youtu.be
-
+ Some code is similar to w3c https://www.w3schools.com/bootstrap4/bootstrap_images.asp
 -->
 
 <!DOCTYPE html>
@@ -53,18 +55,20 @@ author.
   </div>
 </nav>
 
+<!--HEADER: align picture and button using text-center-->
 <!--HEADER: adding primary and info button in Bootstrap-->
+<div class="text-center">
     <header id="header-1">
-      <div class="container">
-        <img src="image/phuong.jpg" alt="Photo of Phuong" width="50" height="50">
-        <h2>Hi there, I'm Phuong Do </h2>
+        <br>
+        <img src="image/phuong.jpg" class="rounded-circle" alt="Photo of Phuong" width="180" height="200">
+        <h2><strong>Hi there, I'm Phuong Do </strong></h2>
         <h3>Full-time Student - Software Engineer - Nail tech </h3>
         <br>
         <a href="#" class="btn btn-primary btn-lg">HIRE ME</a>
         <a href="#" class="btn btn-info btn-lg">MY RESUME</a>
-
-      </div>
     </header>
+    </div>
+
 
 <!-- Part 1b: Friendly Introduction: using small Grid 7-5 for 2 block Welcome & Basic info -->
 <div class="container">
@@ -87,7 +91,7 @@ author.
     </div>
 
 
-  <!-- Part 1a: background- Using Grid like welcome above -->
+  <!-- Part 1b: Basic-info using 5 column grid and responsive with small size device -->
 
         <div class="col-sm-5">
         <div id="Basic-info">
@@ -103,8 +107,8 @@ author.
           </ul>
         </div>
         </div>
-</div>
-</div>
+      </div>
+    </div>
 <!-- Part 2: Skills: Adding progess bar of BootStrap with animation to express skill level -->
       <div class ="container">
       <section id = "skills">
@@ -206,7 +210,7 @@ author.
         </div>
         </div>
       <div class="carousel-item">
-        <img src="image/ai.jpg" class="img-fluid mx-auto d-block" alt="AI" >
+        <img src="image/ai.jpg" class="img-fluid mx-auto d-block" alt="AI">
         <div class="carousel-caption">
           <h3> Artificial Intelligence</h3>
           <div class="dropup dropright">
@@ -236,7 +240,7 @@ author.
 <!-- Part 5: PERSONAL HOBBY: using my own customized box -->
 <!-- using Bootstrap Badge-->
 
-          <div class="box-2">
+          <div class="box-1">
             <section id="hobby">
             <h4> PERSONAL HOBBY: </h4>
             <p><em>I have two major things that I love to do in my free-time:
@@ -253,14 +257,20 @@ author.
 
 <!-- Part 6: Copyright -->
 <!-- Footer -->
-<!-- This part I kept the same -->
+<!-- This part I used container small to make it responsive with mobile device -->
+<!-- Using class text-center to align image and copyright -->
 
+
+<div class="container-sm">
 <footer id="footer">
-      <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fcs.uml.edu%2F~pdo%2FCSS%2Fstyle.css">
-     <img src="image/vcss.jpg" alt="VCSS validated!">
-     </a>
-    <p>Copyright &copy; 2020, Phuong_Do's Website </p>
+  <div class="text-center">
+      <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fcs.uml.edu%2F~pdo%2FCSS%2Fstyle.css" target = "blank">
+     <img src="image/vcss.jpg" alt="VCSS validated!" width= 100px heigh=40px
+     <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fcs.uml.edu%2F~pdo%2FCSS%2Fstyle.css" target = "blank"></a>
+    <p><strong>Copyright &copy; 2020, Phuong_Do's Website <strong></p>
+  </div>
 </footer>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
