--- a/HW5/index.html
+++ b/HW5/index.html
@@ -48,7 +48,7 @@ author.
     <input type="text" id="max_column"><span id="max_column_error"></span>
     <br>
     <input type="button" value="Submit" onclick="errorHandle()"><span id="info_error"></span>
-    <input type="reset" value="Reset" onclick="removeTable()">
+    <input type="reset" value="Reset">
 
     <div id="container"></div>
 
