--- a/Homework/HW6/index.html
+++ b/Homework/HW6/index.html
@@ -47,7 +47,7 @@ author.
     <br>
     <input type="number" id="max_column" name ="max_column" placeholder="Enter number here"><span id="max_column_error"></span>
     <br>
-    <button type="submit"  id="Submit_button">Submit</button>
+    <button type="submit"  id="Submit_button" onclick ="createTable">Submit</button>
     <button type="reset"  id="reset">Reset</button>
 
 
