--- a/Homework/HW7/index.html
+++ b/Homework/HW7/index.html
@@ -65,7 +65,7 @@ author.
     <span id="max_column_error"></span>
     <br>
     <!--Button-->
-    <button type="create" id="create_button">Add Table To Tab</button>
+    <button type="submit" id="create_button">Add Table To Tab</button>
     <button type="delete" id="delete_button">Delete Selected Tab</button>
     <button type="reset"  id="reset">Reset</button>
     <div id="container"  class = "overflow"></div>
